修改默认方法反射